--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body{
    background-color: white;
    margin: 1px;
    text-align: center;
+   user-select: none;
 }
 .btn:hover{
    background-color: wheat;
